--- a/css/master.css
+++ b/css/master.css
@@ -6,7 +6,7 @@ body {
   padding: 0;
 }
 
-/* NOTE: ANCHO Y ALTO DE LA PARTE DE ARRIBA */
+/* NOTE: ANCHO Y ALTO DE LA PARTE DE ARRIBA a */
 #topart
 {
   width: 100%;
