--- a/css/master.css
+++ b/css/master.css
@@ -140,6 +140,7 @@ h1{
   z-index: 13;
   font-size: 30pt;
   font-weight: 300;
+  display: none;
 }
 
 ul li a:hover, .dropdown:hover{
@@ -164,7 +165,7 @@ CONTENIDO CONTENIDO  */
 #contenido{
   width: 100%;
   margin:0;
-  padding:0;
+  padding:100px 0 ;
   background-color: black;
 }
 
@@ -174,17 +175,100 @@ CONTENIDO CONTENIDO  */
   font-weight: 500;
   color: white;
   margin: 0;
-  padding: 45px;
+
 }
 
 #contenido p {
+  font-weight: 300;
+  font-size: 14pt;
   color: white;
-  margin:auto;
-  display: table;
+  text-align: center;
+  margin: 0 40px;
+}
+
+#contenido h3 {
+  background: red;
+  color: white;
+  text-align: center;
+  font-size: 18pt;
+  font-weight: 600;
+  margin:0;
+  padding:10px
+}
+
+#contenido a {
+  text-decoration: none;
+}
+.columnafotos {
+
+  margin: auto;
+  display:table;
+  text-align: center
+
+}
+
+.fila{
+    display:inline-table;
+    margin: 15px;
+}
+
+.foto3{
+  object-position: 50% 50%;
+  object-fit: cover;
+  width: 300px;
+  height:300px;
+  margin:0;
+
+}
+
+.stripe {
+  width: 100%;
+  height:4px;
+  background: white;
 }
 
 
+footer{
+  width:100%;
+  height:300px;
+  background: black
+}
 
+.footercontained{
+  max-width: 1110px;
+  margin: auto;
+}
+
+/* NOTE: ENLACES */
+.linkbar {
+  background: green;
+  padding:20px 40px;
+}
+
+.footrcolumna{
+  width:48%;
+  display: inline-table;
+  mq4tina
+}
+
+.footrfila{
+  height: 60px;
+
+}
+
+/* NOTE: INFO DE COPYRIGHT Y FRSASE */
+.creditbar{
+  background: white;
+  height: 100px;
+}
+
+.copyright{
+  float: left;
+}
+
+.frase {
+  float: right;
+}
 
 
 
