--- a/css/master.css
+++ b/css/master.css
@@ -178,7 +178,7 @@ CONTENIDO CONTENIDO  */
 
 }
 
-#contenido p {
+#contenido h5 {
   font-weight: 300;
   font-size: 14pt;
   color: white;
@@ -200,7 +200,7 @@ CONTENIDO CONTENIDO  */
   text-decoration: none;
 }
 .columnafotos {
-
+  max-width: 100%;
   margin: auto;
   display:table;
   text-align: center
@@ -209,7 +209,16 @@ CONTENIDO CONTENIDO  */
 
 .fila{
     display:inline-table;
-    margin: 15px;
+    margin: 20px;
+    vertical-align: text-top;
+}
+
+#contenido p {
+  font-weight: 300;
+  font-size: 12pt;
+  color: white;
+  text-align: center;
+  margin: 0 40px;
 }
 
 .foto3{
@@ -221,6 +230,19 @@ CONTENIDO CONTENIDO  */
 
 }
 
+.fotoind {
+  object-position: 50% 50%;
+  object-fit: cover;
+  width: 400px;
+  height:400px;
+  margin:0;
+}
+
+.parrafoind{
+  float: right;
+  max-width:500px;
+  vertical-align: text-top;
+}
 .stripe {
   width: 100%;
   height:4px;
